[package]
edition = "2024"
name = "oprenta_components"
version = "0.1.0"
build = "build.rs"

[dependencies]
dioxus = { workspace = true }
smol_str = { workspace = true }

[build-dependencies]
anyhow = "1.0.100"
reqwest = "0.12.24"
which = "8.0.0"

[build-dependencies.tokio]
version = "1.48.0"
features = ["rt-multi-thread", "macros", "fs"]

[workspace]
members = ["demo"]
resolver = "3"

[workspace.dependencies]
oprenta_components = { path = "." }

smol_str = "0.3.4"
dioxus = "^0.7"
dioxus-free-icons = "0.10.0"